# specter-mobile

./: .gitignore  .gitmodules  Makefile  README.md  analysis_options.yaml  pubspec.yaml  update-locales.bat
android/app/: build.gradle
assets/locales/: en_US.json
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  main.dart  utils.dart
lib/app/models/: CryptoContainerModel.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/widgets/: BottomMenu.dart  BottomSlideMenu.dart  DateSelector.dart  LightButton.dart  LightFilter.dart  LightTab.dart  QRCodeGenerator.dart  QRCodeScanner.dart  TopSide.dart
lib/services/: CCryptoExceptions.dart  CCryptoLocalSign.dart  CCryptoService.dart  CEntropyExternalGenerationService.dart  CEntropyGenerationService.dart  CNotificationService.dart  CServices.dart
lib/services/cryptoContainer/: CCryptoContainer.dart  CCryptoLocalSign.dart  PrivateCryptoContainer.dart  SharedCryptoContainer.dart
lib/services/cryptoService/: CControlTransactionsService.dart  CCryptoService.dart  (+3 more)
specter_rust/: .gitignore  README.md  pubspec.yaml
specter_rust/android/: build.gradle  settings.gradle
specter_rust/examples/: hello.dart
specter_rust/ios/: .gitignore  specter_rust.podspec
specter_rust/lib/: DiskStorage.dart  bindings.dart  specter_rust.dart
specter_rust/rust/: Cargo.toml  Makefile  cbindgen.toml
specter_rust/rust/src/: bitcoin_demo.rs  lib.rs
specter_rust/rust_storage/: Cargo.toml
specter_rust/test/: specter_rust_test.dart
test/: widget_test.dart
tools/: update-locales.bat
web/: index.html  manifest.json
(+182 files in other folders)
