[package]
name = "specter_rust"
version = "0.1.0"
authors = ["Specter Solutions <contact@cryptoadvance.io>"]
edition = "2018"

[lib]
name = "specter_rust"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
miniscript = "6.0.1"
bitcoin = { version="0.27.1", features=["base64"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
