[package]
name = "specter_rust"
version = "0.1.0"
authors = ["Specter Solutions <contact@cryptoadvance.io>"]
edition = "2018"

#[profile.release]
#debug = true

[lib]
name = "specter_rust"
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
miniscript = "6.0.1"
bitcoin = { version="0.27.1", features=["base64", "use-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
aes = "0.8.1"
xts-mode = "0.5.0"
orion = "0.17.1"
rand = "0.8.5"